# NetDiag

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/commands/: connect.rs  dns.rs  http.rs  mod.rs  ping.rs  report.rs  scan.rs  trace.rs
src/network/: icmp.rs  mod.rs  resolver.rs  traceroute.rs
src/utils/: format.rs  mod.rs  ports.rs
